--- a/css/move.css
+++ b/css/move.css
@@ -73,10 +73,10 @@
   
   /* Style the header */
   .header {
-      background-color: #00C99C;
-      padding: 30px 40px;
-      color: white;
-      text-align: center;
+    background-color: #00C99C;
+    padding: 10px 10px 20px 10px;
+    color: white;
+    text-align: center;
   }
   
   /* Clear floats after the header */
